@@ -76,15 +76,13 @@ public abstract class Configure {
 				if (defaultConverterClass == null) {
 					return null;
 				} else {
-					converter = defaultConverterClass.newInstance();
+					converter = defaultConverterClass.getDeclaredConstructor().newInstance();
 				}
 			} else {
-				converter = (HeaderConverter) Class.forName(className).newInstance();
+				converter = (HeaderConverter) Class.forName(className).getDeclaredConstructor().newInstance();
 			}
 
-			if (converter instanceof Configurable) {
-				((Configurable) converter).configure(props);
-			}
+		    converter.configure(props);
 
 			// grab any properties intended for the converter
 			Map<String, Object> subKeys = subKeys(classNameProp, props);
